Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deeplearningservice-deployment
  labels:
    app: deeplearningservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deeplearningservice-deployment
  template:
    metadata:
      labels:
        app: deeplearningservice-deployment
    spec:
      containers:
      - name: deeplearningservice-app
        image: salmanad01/rfid-deeplearningservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rfid-backend-deployment
  labels:
    app: rfid-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rfid-backend-deployment
  template:
    metadata:
      labels:
        app: rfid-backend-deployment
    spec:
      containers:
      - name: rfid-backend
        image:  salmanad01/rfid-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        


---
apiVersion: v1
kind: Service
metadata:
  name: deeplearningservice-service
spec:
  type: LoadBalancer
  selector:
    app: deeplearningservice-deployment
  ports:
    - port: 5002
      targetPort: 5002
      nodePort: 30002
    
---
apiVersion: v1
kind: Service
metadata:
  name: rfid-backend-service
spec:
  type: LoadBalancer
  selector:
    app: rfid-backend-deployment
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress  
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: project.rfidbackend.software
      http:
        paths:
          - path: /output
            pathType: Prefix
            backend:
              service:
                name: deeplearningservice-service
                port:
                  number: 5002
          - path: /detect_faces
            pathType: Prefix
            backend:
              service:
                name: deeplearningservice-service
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rfid-backend-service
                port:
                  number: 5000
